# ChiniDataset

./: .gitignore  README.md  pyproject.toml
benchmarks/: bench_cache_look_ahead.py  bench_read_comparison.py  bench_uint32.py  bench_write_backends.py  bench_write_mp.py  results.md  run.py  utils.py
benchmarks/core/: dataloader.py  read.py  write.py
chinidataset/: __init__.py
chinidataset/dataset/: cache.py  reader.py  streaming.py
chinidataset/writer/: base.py  parquet.py
chiniml/: __init__.py  hashing.py  util.py
chiniml/dataset/: __init__.py  cache.py  partition.py  reader.py  shared.py  shuffle.py  streaming.py  world.py
chiniml/writer/: __init__.py  base.py  parquet.py
examples/: 1_example_chinidataset.ipynb  2_example_uint32_numpy_array_write.ipynb  3_example_write_mp.ipynb  4_simulation_lrucache_look_ahead.ipynb  5_using_s3_remote.ipynb  example_chinidataset.ipynb  example_chiniml.ipynb  uint32_numpy_array_comparison.ipynb
