[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chinidataset"
version = "0.1.0"
description = "Parquet streaming dataset library for ML training"
requires-python = ">=3.9"
authors = [{ name = "ChiniDataset Contributors" }]
keywords = ["machine-learning", "streaming", "dataset", "parquet", "pytorch"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "numpy>=1.21.0",
    "pyarrow>=14.0.0",
    "torch>=2.0.0",
    "huggingface-hub>=0.20.0",
]

[project.optional-dependencies]
fast = ["xxhash>=3.0.0"]
all = [
    "xxhash>=3.0.0",
]
dev = ["pytest>=7.0.0", "pytest-cov>=4.0.0"]

[project.urls]
Repository = "https://github.com/Scicom-AI-Enterprise-Organization/ChiniDataset"

[tool.hatch.build.targets.wheel]
packages = ["chinidataset"]

[tool.pytest.ini_options]
testpaths = ["tests"]
